# ksi

./: .gitignore  .gitmodules  =3.0.0  ANALYSIS_PLUGIN_LOGGING_APPROACHES.md  CLAUDE.md  COMPOSITION_SYSTEM_STATUS.md  CONTEXT_COMPACT_COMPOSITION_SYSTEM.md  DEV_MODE_PLAN.md  DOCUMENTATION_FORMATS.md  INSTALL_AND_RUN.md  LEGACY_REMOVAL_SUMMARY.md  LICENSE  MULTI_AGENT_INFRASTRUCTURE.md  MULTI_CLAUDE_ORCHESTRATOR.md  NEW_ARCHITECTURE_SUMMARY.md  NEXT_SESSION_TODO.md  PHASE_3_COORDINATION_STUDY_FINDINGS.md  PLUGIN_ARCHITECTURE_ANALYSIS.md  PROGRESSIVE_COMPONENT_SYSTEM.md  QUICKSTART_TEXTUAL.md  README.md  README_chat_textual.md  README_claude_conversations.md  SESSION_HANDOFF.md  SETUP_INSTRUCTIONS.md  SPAWN_AGENT_ISSUE.md  SPAWN_AGENT_SUCCESS.md  UNIFIED_TEMPLATE_INTEGRATION_SUMMARY.md  agent1.json  agent2.json  agent3.json  agent4.json  agent_process.py  analyze_sessions.py  behavioral_override_optimizer.py  chat.py  chat_simple.py  chat_textual.py  check_composition.py  claude_agent.py  (+177 more)
.claude/: .settings.local.json.swp
agent_profiles/: claude_agent_default.json  coder.json  collaborator.json  conversationalist.json  critic.json  debater.json  goodbye_agent.json  hello_agent.json  ksi-developer.json  orchestrator.json  researcher.json  student.json  teacher.json  temp_collaboration_0.json  temp_collaboration_1.json  tool_tester.json
agent_profiles_backup/: analyst.json  creative.json  ksi-developer.json  researcher.json  temp_collaboration_1.json
autonomous_experiments/: META_COGNITIVE_TEST_RESULTS.md  attractors.json  concept_graph.json  efficiency_analysis.md  entropy_report.md  experiment_log.jsonl  meta_cognitive_compression_synthesis.md  meta_cognitive_compression_validation.md  meta_cognitive_session_essence.md  meta_cognitive_synthesis_final.md  meta_cognitive_task_tracking.json  meta_synthesis.md  protocol_validation.json  session_handoff.json  session_seed.txt  status.json  system_engineering_report.md  test.txt
claude_logs/: 0023da98-8e65-47df-a84c-c8317e82b989.jsonl  01bf74f6-7dae-4730-807d-02bd925beb8c.jsonl  028a84db-ad49-43a3-800b-09a109970fa4.jsonl  02bea6da-9f24-4316-90e0-f50e620dfd07.jsonl  03b4fa9d-e654-465c-829c-c431a9c22566.jsonl  03d26c54-b626-429f-8ea5-c8868fb9c30c.jsonl  051a0189-a2b3-4a54-b87b-59df40eb2f21.jsonl  06257048-9e85-4d8d-9e25-2beecc5fade4.jsonl  09c62fda-a7b7-4a07-bc6a-76394a086a7c.jsonl  0a063b2f-e7ae-4617-8e17-07927dd96b5b.jsonl  0b256d92-9dac-4111-8cf4-583ceaa8eefb.jsonl  0b4bc52f-d519-4a33-a56b-84f844dcefdc.jsonl  0c40497c-ad6e-45e0-a545-3ea7b92ab452.jsonl  0d86a4c3-d640-427e-b600-b19893e0ba8d.jsonl  0e8c7c7f-52a4-47c6-a629-a4ddfe07b640.jsonl  0e9361c9-43ee-41e7-aa99-c6857bd7ef7c.jsonl  0edd125e-6874-462f-8060-5320bd14498e.jsonl  113cfa62-5028-4a49-a6d7-b8a0c45dd9a1.jsonl  11516cb9-bd44-43c0-ad2e-984563146ef0.jsonl  14806e67-2121-491e-ac6e-dd959e0e07b4.jsonl  14b0160d-e49a-417d-b3cf-4a0ecec764c7.jsonl  14ebc863-2e2a-4e36-8851-e880f5fe0c04.jsonl  1639fd5a-1365-45a7-85c7-7bd2a432dbc8.jsonl  171db4f5-3485-4318-8f73-dcb6e01c555c.jsonl  176312e7-114a-4987-9616-c189555e5c4e.jsonl  18c7d90e-2d94-4b73-a20c-78811fa4ef65.jsonl  18e97ec4-257d-4647-8d92-b08f9429c30a.jsonl  193bddb5-4bc8-4419-b306-6b471673bd1a.jsonl  198c7080-8b6f-43e6-97b5-520160377bfa.jsonl  19924f35-f96c-405d-9215-fec2caa754e1.jsonl  19e4e01f-98b1-4e70-bd4a-b47ff24c2728.jsonl  1abac045-d258-4925-91c3-a13acb650d3a.jsonl  1e03a640-f743-44ce-92bb-34fa297e964e.jsonl  2000ac5e-6def-4cfc-9c20-e33398d46b84.jsonl  209817f9-0e2c-4910-aa42-84bc94ae77c0.jsonl  2152a950-8f2e-430b-a30b-ced9465c8b8d.jsonl  222c59fe-6146-4b25-8e7e-8cdf05708f5b.jsonl  2339e9c0-c7e6-47ea-8f19-7a9f447a8421.jsonl  259bff43-5b3c-4279-9e4c-ed95cc52c0ce.jsonl  28ffa9cb-153f-482c-bcf9-008166f2c09c.jsonl  (+209 more)
(+1749 files in other folders)
